<resources>
    <string name="app_name">FCT</string>
    <string name="description_imgLogo">Company logo</string>
    <string name="lbl_no_companies">No companies yet</string>
    <string name="hint_url_logo">Url nameCompany logo</string>
    <string name="hint_name">Company name</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email">Email</string>
    <string name="hint_contactname">Contact person\'s name</string>
    <string name="hint_cif">Company CIF number</string>
    <string name="description_img_logo">Company Logo</string>
    <string name="lbl_save">Save</string>
    <string name="cif_letter_hint">CIF Letter</string>
    <string name="main_invalid_data">Invalid data</string>
    <string name="main_saved_succesfully">Saved successfully</string>
    <string name="main_error_saving">Error saving</string>
    <string name="visits_title">Visits</string>
    <string name="students_title">Students</string>
    <string name="companies_title">Companies</string>
    <string name="list_deleted_successfully">Deleted successfully</string>
    <string name="list_error_deleting">Error deleting</string>
    <string name="company_inserted_successfully">Inserted successfully</string>
    <string name="company_updated_successfully">Updated successfully</string>
    <string name="company_error_inserting">Error inserting</string>
    <string name="company_error_updating">Error updating</string>
    <string name="lbl_add_company">New Company</string>
    <string name="title_name">Name:</string>
    <string name="title_phone">Phone:</string>
    <string name="title_grade">Grade:</string>
    <string name="title_company">Company:</string>
    <string name="title_tutor_name">Tutor name:</string>
    <string name="title_tutor_tel">Tutor tel:</string>
    <string name="lbl_no_students">No students yet</string>
    <string name="hint_name_student">Name</string>
    <string name="description_icon_student">Icon student</string>
    <string name="img_phone_description">Phone icon</string>
    <string name="hint_grade">Grade:</string>
    <string name="description_img_email">Email icon</string>
    <string name="description_img_grade">School icon</string>
    <string name="hint_labor_tutor_name">Labor tutor name</string>
    <string name="hint_tutor_labor_phone">Tutor labor phone</string>
    <string name="description_icon_person">Icon person</string>
    <string name="hint_company_student">Company:</string>
    <string name="description_icon_company">Icon nameCompany</string>
    <string name="hint_icon_schedule">Icon schedule</string>
    <string name="hint_entry_time">Entry time</string>
    <string name="hint_departure_time">Departure time</string>
    <string name="adapter_dialog_student">Select nameCompany</string>
    <string name="msg_no_companies">You have to add at least one name company</string>
    <string name="lbl_new_item">New</string>
    <string name="lbl_no_visits">No visits yet</string>
    <string name="title_date">Date:</string>
    <string name="title_start_time">Start time:</string>
    <string name="title_end_time">End time:</string>
    <string name="title_add_visit">Add Visit</string>
    <string name="hint_date">Date</string>
    <string name="hint_start_time">Start time</string>
    <string name="hint_end_time">End time</string>
    <string name="hint_observations">Observations</string>
    <string name="msg_initial_visit">Do initial visit</string>
    <string name="lbl_spinner_student">Choose student</string>
    <string name="lbl_student_visit">Student:</string>
    <string name="refresh_title">Refresh</string>
    <string name="next_visit_title">Next visit:</string>
    <string name="msg_as_long_as_possible">As soon as possible</string>
    <string name="prefInitalPageKey">initialPAge</string>
    <string name="prefPageTitle">Main page</string>
    <string name="prefInitalPageTitle">Main page</string>
    <string name="preferences_title">Preferences</string>
    <string name="prefDays_key" translatable="false">prefShifts</string>
    <string name="prefShifts_title">Days the next visit</string>
    <string name="prefShifts_dialogTitle">Days do you want to consider for the next visit</string>
    <string name="defaultValueDays">15</string>
    <string name="msg_no_students">There must be at least one student in the database</string>
    <string-array name="prefShifts_defaultValue">
        <item>15</item>
    </string-array>
    <string-array name="prefShifts_entries">
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string-array name="prefShifts_entryValues">
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string-array name="pre_pages_values">
        <item>@string/visits_title</item>
        <item>@string/students_title</item>
        <item>@string/companies_title</item>
    </string-array>
    <string-array name="grades">
        <item>2º DAM</item>
        <item>2º SMR</item>
    </string-array>
</resources>
