<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_name"
            app:layout_constraintStart_toEndOf="@+id/imgIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblNameStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/titleName"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/titlePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_phone"
            app:layout_constraintStart_toEndOf="@+id/imgIcon"
            app:layout_constraintTop_toBottomOf="@+id/titleName" />

        <TextView
            android:id="@+id/lblPhoneStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/titlePhone"
            app:layout_constraintTop_toBottomOf="@+id/lblNameStudent"
            tools:text="@tools:sample/us_phones" />

        <TextView
            android:id="@+id/titleGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_grade"
            app:layout_constraintStart_toEndOf="@+id/imgIcon"
            app:layout_constraintTop_toBottomOf="@+id/titlePhone" />

        <TextView
            android:id="@+id/lblGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/titleGrade"
            app:layout_constraintTop_toBottomOf="@+id/lblPhoneStudent"
            tools:text="@tools:sample/cities" />

        <TextView
            android:id="@+id/titleCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_company"
            app:layout_constraintStart_toEndOf="@+id/lblGrade"
            app:layout_constraintTop_toBottomOf="@+id/lblPhoneStudent" />

        <TextView
            android:id="@+id/lblCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/titleCompany"
            app:layout_constraintTop_toBottomOf="@+id/lblPhoneStudent"
            tools:text="@tools:sample/last_names" />

        <TextView
            android:id="@+id/titleTutorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_tutor_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleGrade" />

        <TextView
            android:id="@+id/lblTutorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/titleTutorName"
            app:layout_constraintTop_toBottomOf="@+id/lblGrade"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/titleTutorPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_tutor_tel"
            app:layout_constraintStart_toEndOf="@+id/lblTutorName"
            app:layout_constraintTop_toBottomOf="@+id/titleCompany" />

        <TextView
            android:id="@+id/lblTutorPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/titleTutorPhone"
            app:layout_constraintTop_toBottomOf="@+id/lblCompany"
            tools:text="@tools:sample/us_phones" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="84dp"
            android:layout_height="74dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user"
            android:contentDescription="@string/description_icon_student" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>